--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 *
 {
+    box-sizing: border-box;
     margin:  0px;
     padding: 0px;
 }
@@ -9,7 +10,7 @@ header {
     /*width: 100%;*/
     justify-content: space-between;
     align-items: center;
-    background-color:cadetblue;
+    background: #034b64;
     /*padding-bottom: 5px;*/
     padding: 10px 30px;
     
@@ -24,7 +25,7 @@ header {
 
 header h1{
     text-align: center;
-    color: bisque;
+    color: #d6c7ae;
     flex: 1;
     font: 30px "Times New Roman";
 }
@@ -69,10 +70,13 @@ a:hover{
     text-decoration: underline;
 }
 
+
 .content{
     width: 100%;
     padding-left: 25px;
+    padding-right: 25px;
     text-align: justify;
+    background-color: #dab496;
     /* 
     background-image: url(images/icon.jpg);
     background-repeat: no-repeat;
@@ -81,9 +85,13 @@ a:hover{
     */
 }
 
+.content p{
+    color:black;
+}
+
 .list-aboutme{
     padding-left: 30px;
-    list-style-type: lower-roman;
+    /*list-style-type: lower-roman;*/
 }
 
 .profile{
@@ -91,15 +99,114 @@ a:hover{
     
     width: 100px;
     height: 100px;
+    /*
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;*/
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+.contactus{
+   text-align: center;
+}
+
+.phone{
+   text-align: center;
+   width: 80%;
+   margin: 20px auto;
+   background-color:#fff;
+   border: 1px solid #ccc;
+   padding: 15px;
+   border-radius: 5px;
+   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.phone_icon{
+    width: 30px;
+    height: 30px;
+}
+.email{
+    text-align: center;
+    width: 80%;
+   margin: 20px auto;
+   background-color:#fff;
+   border: 1px solid #ccc;
+   padding: 15px;
+   border-radius: 5px;
+   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+body{
+    background-color: #dab496;
 }
 
 footer{
     width: 100%;
     position:absolute;
     bottom: 0;
-    color:antiquewhite;
-    background-color: darkcyan;
+    color:#d6c7ae;
+    background-color: #034b64;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+table{
+    margin-top: 10px;
+    border-collapse: collapse;
+}
+
+td, th{
+    border: 1px dashed black
+}
+
+.academic a{
+    color: black;
+}
+
+.academic img{
+    float: left;
+}
+
+.academic p{
+    padding-left: 120px;
+}
+
+.genre{
+    padding-left: 20px;
+    list-style-type: none;
+}
+
+.genre li::before{
+    content: "- ";
+}
+
+.task{
+    padding-left: 40px;
+}
+
+.experience a{
+    color: black;
+}
+
+.container{
+    max-width: 1300px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.footer{
+    background: #034b64;
+    color: #d6c7ae;
+    padding:20px;
+}
+.footer p{
+    text-align: center;
+}
+
